adding front-end

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,17 @@ venv/
 # OS
 .DS_Store
 Thumbs.db
+
+# Frontend
+frontend/node_modules/
+frontend/.next/
+frontend/dist/
+
+# API
+api/__pycache__/
+api/*.pyc
+api/venv/
+
+# Environment
+.env
+.env.local
